--- a/index.html
+++ b/index.html
@@ -4,3 +4,9 @@ layout: single
 
 
 <img src="{{site.baseurl}}/assets/img/aaa.png">
+
+
+
+##contact
+twitter : https://twitter.com/frostory_game
+email : frostorygame@gmail.com
