--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
----
-layout: single
----
+<head>
+
+<title>frostory</title>
+
+</head>
 
 
-<img src="{{site.baseurl}}/assets/img/aaa.png">
+<img src="assets/img/aaa.png">
 
 
 
-##contact
+contact
 twitter : https://twitter.com/frostory_game
 email : frostorygame@gmail.com
