--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,6 @@ body{
 	background-size: 1243px 1201px;
 	background-position: top;
 	background-color: #dbd5ce;
-
 }
 
 .wrapper {
@@ -18,26 +17,8 @@ body{
   margin: 0 auto; /* 위 아래 마진은 0 좌우 마진은 auto */
 }
 
-.bg1 {
-	background-image:url(assets/img/prop_1.png);
-	background-repeat: ..;
-}
-
-.bg2 {
-
-	background-image:url(assets/img/prop_2.png);
-}
-
 .center {
   margin: 0 auto;
-}
-
-.parent {
-	width:100%;
-	height:100%;
-
-	overflow-x: hidden; 
-    overflow-y: auto;
 }
 
 .title {
@@ -48,9 +29,9 @@ body{
 	max-height:131px;
 
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 5%; right: 0; /* confuse it i guess */
+    top: -80%; right: 0; /* confuse it i guess */
     bottom: 0; left: 0;
-    margin: 0 auto; /* make em equal */
+    margin: auto; /* make em equal */
 }
 
 .video {
@@ -61,50 +42,40 @@ body{
 	max-height:405px;
 
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 20%; right: 0; /* confuse it i guess */
+    top: -30%; right: 0; /* confuse it i guess */
     bottom: 0; left: 0;
-    margin: 0 auto; /* make em equal */
+    margin: auto; /* make em equal */
 }
 
 .prop_1 {
-
-
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 25%; right: 50%; /* confuse it i guess */
-    bottom: 0;
-    margin: 0 0; /* make em equal */
+    top: 50%; right: 0; /* confuse it i guess */
+    bottom: 0; left: -50%;
+    margin: auto; /* make em equal */
 }
 
 .prop_2 {
-
-
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 70%; left: 60%; /* confuse it i guess */
-    bottom: 0;
-    margin: 0 0; /* make em equal */
+    top: 90%; right: -30%; /* confuse it i guess */
+    bottom: 0; left: 0%;
+    margin: auto; /* make em equal */
 }
 
 </style>
 </head>
 
-<body scroll="no" style="overflow: hidden">
-
-<div class="parent">
-
-	<img class="title" src="assets/img/title.png">
+<body>
 
 
-	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sk5iccX-DFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-	<div>
-
-	</div>
+<img class="title" src="assets/img/title.png">
 
 
-	<img class="prop_1" src="assets/img/prop_1.png">
-	<img class="prop_2" src="assets/img/prop_2.png">
+<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sk5iccX-DFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-</div>
+twitter:fros
+
+<img class="prop_1" src="assets/img/prop_1.png">
+<img class="prop_2" src="assets/img/prop_2.png">
 
 </body>
 
