--- a/index.html
+++ b/index.html
@@ -2,107 +2,143 @@
 <html>
 <head>
 
+<link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sunflower:wght@300;700&display=swap" rel="stylesheet">
+
 <title>frostory</title>
 <style>
+
+html{
+    margin: 0;
+    height: 100%;
+}
+
 body{
-	background-image:url("assets/img/bg.png");
-	background-repeat: repeat-x;
-	background-size: 1243px 1201px;
-	background-position: top;
+    margin: 0;
+	width:100%;
+	height:100%;
+
+	background-image:url("assets/img/prop_2.png"),url("assets/img/bg.png");
+	background-repeat: no-repeat, repeat-x;
+	background-size: 786px 883px, 1243px 1201px;
+	background-position: left calc(50vw + 100px) top calc(35vh + 400px), top;
 	background-color: #dbd5ce;
-
-}
-
-.wrapper {
-  width: 600px;
-  margin: 0 auto; /* 위 아래 마진은 0 좌우 마진은 auto */
-}
-
-.bg1 {
-	background-image:url(assets/img/prop_1.png);
-	background-repeat: ..;
-}
-
-.bg2 {
-
-	background-image:url(assets/img/prop_2.png);
-}
-
-.center {
-  margin: 0 auto;
 }
 
 .parent {
 	width:100%;
 	height:100%;
+	margin:0;
+}
 
-	overflow-x: hidden; 
-    overflow-y: auto;
+.front-space {
+	display: block;
+
+	min-height:1%;
+}
+
+.snd-space {
+	display: block;
+
+	min-height:1%;
 }
 
 .title {
+	display: block;
+
 	width: calc(100% - 100px);
 	height: calc((100vw - 100px) * 0.2683);
 
 	max-width:492px;
 	max-height:131px;
 
-    position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 5%; right: 0; /* confuse it i guess */
-    bottom: 0; left: 0;
-    margin: 0 auto; /* make em equal */
+	margin:40px auto auto auto;
 }
 
 .video {
+	display: block;
+
 	width: calc(100% - 20px);
 	height: calc((100vw - 20px) * 0.5625);
 
 	max-width:720px;
-	max-height:405px;
+	max-height:404.5px;
 
-    position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 20%; right: 0; /* confuse it i guess */
-    bottom: 0; left: 0;
     margin: 0 auto; /* make em equal */
 }
 
+
 .prop_1 {
-
-
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 25%; right: 50%; /* confuse it i guess */
+    top:30%; right: 50%; /* confuse it i guess */
     bottom: 0;
-    margin: 0 0; /* make em equal */
+
+    pointer-events:none;
 }
 
 .prop_2 {
-
-
     position: absolute; /* positions out of the flow, but according to the nearest parent */
-    top: 70%; left: 60%; /* confuse it i guess */
+    top: 0; left: 60%; /* confuse it i guess */
     bottom: 0;
-    margin: 0 0; /* make em equal */
+    margin: 40% auto 0 auto; /* make em equal */
+
+    pointer-events:none;
+}
+
+.desc {
+	font-family: "Sunflower", sans-serif;
+	color:#000000;
+	text-align: center;
+	z-index: 1000;
+	position: relative;
+	font-size:22px;
+	font-weight:400;
+}
+
+
+.desc2box {
+	width:220px;
+	height:150px;
+	margin:auto auto;
 }
 
 </style>
 </head>
 
-<body scroll="no" style="overflow: hidden">
+<body >
+
 
 <div class="parent">
 
+	<img class="prop_1" src="assets/img/prop_1.png">
+
+	<div class="front-space"></div>
+
 	<img class="title" src="assets/img/title.png">
 
+	<div class="snd-space"></div>
 
-	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sk5iccX-DFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<div class="desc">
 
-	<div>
+	<p>소개 페이지를 방문해주셔서 감사합니다!</p>
+	프로스토리는 스토리가 있는 액션 어드벤처 게임으로,<br>
+	2017년 초부터 두 명이서 개발하고 있습니다.<br>
+	2021년 하반기 출시를 목표로 개발중에 있으니 조금만 기다려 주세요!
+	<br> 
+	<br> 
 
 	</div>
 
+	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sk5iccX-DFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-	<img class="prop_1" src="assets/img/prop_1.png">
-	<img class="prop_2" src="assets/img/prop_2.png">
+<!-- 
+	<img class="prop_2" src="assets/img/prop_2.png"> -->
+	<br>
+
+	<div class="desc2box">
+		<p> Contact: </p>
+		<a href="https://twitter.com/frostory_game">Twitter : frostory_game</a>
+		<br>frotstorygame@gmail.com
+	</div>
 
 </div>
 
