--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body{
 
 	</div>
 
-	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/6CQZ7A6X1mk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/JdcelhlP2zw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <!-- 
 	<img class="prop_2" src="assets/img/prop_2.png"> -->
