--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sunflower:wght@300;700&display=swap" rel="stylesheet">
 
-<title>frostory</title>
+<title>Frostory 소개 페이지</title>
 <style>
 
 html{
