--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body{
 	<div class="desc2box">
 		<p> Contact: </p>
 		<a href="https://twitter.com/frostory_game">Twitter : frostory_game</a>
-		<br>frotstorygame@gmail.com
+		<br>frostorygame@gmail.com
 	</div>
 
 </div>
