--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 		<div class="desc">
 
 			<p>소개 페이지를 방문해주셔서 감사합니다!</p>
-			프로스토리는 스토리가 있는 액션 어드벤처 게임입니다.<br><br>
+			<p>프로스토리는 스토리가 있는 액션 어드벤처 게임입니다.</p>
+			<p>저희 게임에 관심이 있으시다면, 데모를 다운로드해 플레이해보세요!</p>
+			<br><br>
 		</div>
 		<div class="desc_down">
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
