--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		.prop_1 {
 			position: absolute;
 			/* positions out of the flow, but according to the nearest parent */
-			top: 30%;
+			top: 35%;
 			right: 50%;
 			/* confuse it i guess */
 			bottom: 0;
@@ -99,7 +99,7 @@
 			text-align: center;
 			z-index: 1000;
 			position: relative;
-			font-size: 22px;
+			font-size: 18px;
 			font-weight: 400;
 		}
 
@@ -158,7 +158,7 @@
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
 				<img class="fit-picture" src="assets/img/demo_download.png"></a>
 				<p>Windows, 2020-12-08 버전</p>
-		</div><br>
+		</div>
 
 		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/JdcelhlP2zw" frameborder="0"
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
