--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<p>Windows, 2021-1-18 버전</p>
 		</div>
 		
-		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/QwTGj2Alxb8" frameborder="0"
+		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/JdcelhlP2zw" frameborder="0"
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		<!-- 
