--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 		<div class="desc_down">
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
 				<img class="fit-picture" src="assets/img/demo_download.png"></a>
-				<p>Windows, 2021-2-28 버전</p>
+				<p>Windows, 2021-5-6 버전</p>
 		</div>
 		
-		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/JdcelhlP2zw" frameborder="0"
+		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/6OTnO9-RH7Y" frameborder="0"
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		<!-- 
