--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="desc">
 
 			<p>소개 페이지를 방문해주셔서 감사합니다!</p>
-			<p>프로스토리는 스토리가 있는 액션 어드벤처 게임입니다.</p>
+			<p>프로스토리는 스토리가 있는 액션 어드벤처 게임이며 현재 개발 중입니다.</p>
 			<p>저희 게임에 관심이 있으시다면, 데모를 다운로드해 플레이해보세요!</p>
 		</div>
 		<div class="desc_down">
