--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
 				<img class="fit-picture" src="assets/img/demo_download.png"></a>
 				<p>Windows, 2021-5-26 버전</p>
+			<p><a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing">Android 버전 다운로드</a></p>
+
 		</div>
 		
-		<a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing">안드로이드 버전</a>
 		
 		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/6OTnO9-RH7Y" frameborder="0"
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
