--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			background-image: url("assets/img/prop_2.png"), url("assets/img/bg.png");
 			background-repeat: no-repeat, repeat-x;
 			background-size: 786px 883px, 1243px 1201px;
-			background-position: left calc(50vw + 100px) top calc(35vh + 400px), top;
+			background-position: left calc(50vw + 100px) top 850px, top;
 			background-color: #dbd5ce;
 		}
 
@@ -72,7 +72,7 @@
 		.prop_1 {
 			position: absolute;
 			/* positions out of the flow, but according to the nearest parent */
-			top: 35%;
+			top: 430px;
 			right: 50%;
 			/* confuse it i guess */
 			bottom: 0;
@@ -83,7 +83,7 @@
 		.prop_2 {
 			position: absolute;
 			/* positions out of the flow, but according to the nearest parent */
-			top: 0;
+			top: 450px;
 			left: 60%;
 			/* confuse it i guess */
 			bottom: 0;
