--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 			width: 100%;
 			height: 100%;
 
-			background-image: url("assets/img/prop_2.png"), url("assets/img/bg.png");
+			background-image: url("assets/img/banner_center.png"), url("assets/img/banner_bg.png");
 			background-repeat: no-repeat, repeat-x;
-			background-size: 786px 883px, 1243px 1201px;
-			background-position: left calc(50vw + 100px) top 850px, top;
-			background-color: #dbd5ce;
+			/* background-size: 786px 883px, 1243px 1201px; */
+			background-position: top, top;
+			background-color: #282e34;
 		}
 
 		.parent {
@@ -33,26 +33,12 @@
 
 		.front-space {
 			display: block;
-
-			min-height: 1%;
+			height: 480px;
 		}
 
 		.snd-space {
 			display: block;
-
-			min-height: 1%;
-		}
-
-		.title {
-			display: block;
-
-			width: calc(100% - 100px);
-			height: calc((100vw - 100px) * 0.2683);
-
-			max-width: 492px;
-			max-height: 131px;
-
-			margin: 40px auto auto auto;
+			height: 100px;
 		}
 
 		.video {
@@ -68,41 +54,15 @@
 			/* make em equal */
 		}
 
-
-		.prop_1 {
-			position: absolute;
-			/* positions out of the flow, but according to the nearest parent */
-			top: 430px;
-			right: 50%;
-			/* confuse it i guess */
-			bottom: 0;
-
-			pointer-events: none;
-		}
-
-		.prop_2 {
-			position: absolute;
-			/* positions out of the flow, but according to the nearest parent */
-			top: 450px;
-			left: 60%;
-			/* confuse it i guess */
-			bottom: 0;
-			margin: 40% auto 0 auto;
-			/* make em equal */
-
-			pointer-events: none;
-		}
-
 		.desc {
 			font-family: 'Noto Sans KR', sans-serif;
-			color: #000000;
+			color: #d6dde5;
 			text-align: center;
 			z-index: 1000;
 			position: relative;
-			font-size: 18px;
+			font-size: 16px;
 			font-weight: 400;
 		}
-
 
 		.down_btn {
 			text-align: center;
@@ -112,13 +72,13 @@
 
 		.down_btn:hover {
 			z-index: 1000;
-			color: #000000;
+			color: #d6dde5;
 			filter: brightness(1.75);
 		}
 
 		.desc_down {
 			font-family: 'Noto Sans KR', sans-serif;
-			color: #000000;
+			color: #d6dde5;
 			text-align: center;
 			z-index: 1000;
 			position: relative;
@@ -126,8 +86,8 @@
 			font-weight: 400;
 		}
 
-
 		.desc2box {
+			color: #d6dde5;
 			width: 220px;
 			height: 150px;
 			margin: auto auto;
@@ -140,44 +100,77 @@
 
 	<div class="parent">
 
-		<img class="prop_1" src="assets/img/prop_1.png">
-
 		<div class="front-space"></div>
 
-		<img class="title" src="assets/img/title.png">
+		<div class="desc">
+			<p style="font-size:18px">당신은 어두운 방에서 깨어난 요정입니다.</p>
+			<br>
+			<img class="fit-picture" src="assets/img/gif1.gif"></a>
+			<br>
+			<p>그리고 주변에는 무시무시한 괴물들이 돌아다니고 있습니다.</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<img class="fit-picture" src="assets/img/villain.gif"></a>
+			<br>
+			<p>하지만 걱정마세요!</p>
+			<p>당신의 곁에는 믿음직스러운 동료 레오나르도 경이 함께하니까요.</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<p>
+				<img class="fit-picture" src="assets/img/wep1.gif"></a>
+				&nbsp;&nbsp;&nbsp; 
+				<img class="fit-picture" src="assets/img/wep2.gif"></a>
+				&nbsp;&nbsp;&nbsp;
+				<img class="fit-picture" src="assets/img/wep3.gif"></a>
+			</p>
+			<p>다양한 무기들을 기억하고 소환해 괴물들과 맞서 싸우세요.</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<img class="fit-picture" src="assets/img/rune.gif"></a>
+			<p>자유롭게 변경 가능한 룬을 통해 더욱 강해질 수 있습니다.</p>
+			<p>그리고 특별한 효과를 가진 숨겨진 룬도 존재합니다</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<img class="fit-picture" src="assets/img/final_warrior.gif"></a>
+			<p>프로스토리는 현재 개발중인 게임입니다.</p>
+			<p>아래에서 데모 버전을 다운받아 플레이하고, 여러분들의 의견을 전달해주세요!</p>
+			<br>
+			<br>
+			<p>추후 언젠가, 더 많은 무기와 의복, 다양한 캐릭터들이 등장하는 완성된 게임으로 찾아뵙겠습니다.</p>
+		</div>
 
 		<div class="snd-space"></div>
 
-		<div class="desc">
-
-			<p>소개 페이지를 방문해주셔서 감사합니다!</p>
-			<p>프로스토리는 스토리가 있는 액션 어드벤처 게임이며 현재 개발 중입니다.</p>
-			<p>저희 게임에 관심이 있으시다면, 데모를 다운로드해 플레이해보세요!</p>
-		</div>
+		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/6OTnO9-RH7Y" frameborder="0"
+			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<br>
+			<br>
+			
 		<div class="desc_down">
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
 				<img class="fit-picture" src="assets/img/demo_download.png"></a>
 				<p>Windows, 2021-6-10 버전</p>
-			<p><a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing">Android 버전 다운로드</a>(2021-6-10)</p>
+			<p><a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing" style="color:#aac8ff;">Android 버전 다운로드</a>(2021-6-10)</p>
 
 		</div>
-		
-		
-		<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/6OTnO9-RH7Y" frameborder="0"
-			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		<!-- 
 	<img class="prop_2" src="assets/img/prop_2.png"> -->
 		<br>
 
 		<div class="desc2box">
-			<p> Contact: </p>
-			<a href="https://twitter.com/frostory_game">Twitter : frostory_game</a>
+			<a href="https://twitter.com/frostory_game" style="color:#aac8ff;">Twitter : frostory_game</a>
 			<br>frostorygame@gmail.com
 		</div>
-
 	</div>
-
 </body>
-
 </html>
