--- a/index.html
+++ b/index.html
@@ -2,97 +2,11 @@
 <html>
 
 <head>
-
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700&display=swap" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 
 	<title>Frostory 소개 페이지</title>
-	<style>
-		html {
-			margin: 0;
-			height: 100%;
-		}
-
-		body {
-			margin: 0;
-			width: 100%;
-			height: 100%;
-
-			background-image: url("assets/img/banner_center.png"), url("assets/img/banner_bg.png");
-			background-repeat: no-repeat, repeat-x;
-			/* background-size: 786px 883px, 1243px 1201px; */
-			background-position: top, top;
-			background-color: #282e34;
-		}
-
-		.parent {
-			width: 100%;
-			height: 100%;
-			margin: 0;
-		}
-
-		.front-space {
-			display: block;
-			height: 480px;
-		}
-
-		.snd-space {
-			display: block;
-			height: 100px;
-		}
-
-		.video {
-			display: block;
-
-			width: calc(100% - 20px);
-			height: calc((100vw - 20px) * 0.5625);
-
-			max-width: 720px;
-			max-height: 404.5px;
-
-			margin: 0 auto;
-			/* make em equal */
-		}
-
-		.desc {
-			font-family: 'Noto Sans KR', sans-serif;
-			color: #d6dde5;
-			text-align: center;
-			z-index: 1000;
-			position: relative;
-			font-size: 16px;
-			font-weight: 400;
-		}
-
-		.down_btn {
-			text-align: center;
-			position: relative;
-			z-index: 1000;
-		}
-
-		.down_btn:hover {
-			z-index: 1000;
-			color: #d6dde5;
-			filter: brightness(1.75);
-		}
-
-		.desc_down {
-			font-family: 'Noto Sans KR', sans-serif;
-			color: #d6dde5;
-			text-align: center;
-			z-index: 1000;
-			position: relative;
-			font-size: 12px;
-			font-weight: 400;
-		}
-
-		.desc2box {
-			color: #d6dde5;
-			width: 220px;
-			height: 150px;
-			margin: auto auto;
-		}
-	</style>
 </head>
 
 <body>
@@ -158,9 +72,9 @@
 		<div class="desc_down">
 			<a class="down_btn" href="https://drive.google.com/file/d/14PzgBVK_DUCqzrakRoysklz2hm4H6qk2/view?usp=sharing" target="_blank">
 				<img class="fit-picture" src="assets/img/demo_download.png"></a>
-				<p>Windows, 2021-6-10 버전</p>
-			<p><a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing" style="color:#aac8ff;">Android 버전 다운로드</a>(2021-6-10)</p>
-
+				<p>Windows, 2021-7-14 버전</p>
+			<p><a href="https://drive.google.com/file/d/1Zt0GI9OCobS5_QKgBPK-VWyFs0HfFhDV/view?usp=sharing" style="color:#aac8ff;">Android 버전 다운로드</a></p>
+			<a href="patch.html" style="color:#aac8ff;">데모버전 변경 로그</a>
 		</div>
 
 		<!-- 
