--- a/patch.html
+++ b/patch.html
@@ -20,6 +20,7 @@
 			<p>데모 버전은 정식 버전이 출시될 때까지 레벨의 공개 범위나 게임 요소들에 큰 변경사항은 없을 예정이며, 사소한 변경과 버그 수정만 있을 예정입니다.</p>
 			<p>하지만 새로운 빌드가 올라올 때마다 처음부터 플레이하시는 분들이 관찰되어서 이곳에 변경점들을 기록합니다.</p>
 			<p>-------------------------------------------</p>
+			<p>21.8.8 : 사소한 버그 수정(BIGS)</p>
 			<p>21.8.5 : 각종 버그 수정(BIGS)</p>
 			<p>21.7.18 : 버그 수정 및 복도에 지도 추가(BIGS)</p>
 			<p>21.7.14 : 버그 수정 및 포탑 퍼즐 난이도 조정</p>
