--- a/patch.html
+++ b/patch.html
@@ -20,12 +20,13 @@
 			<p>데모 버전은 정식 버전이 출시될 때까지 레벨의 공개 범위나 게임 요소들에 큰 변경사항은 없을 예정이며, 사소한 변경과 버그 수정만 있을 예정입니다.</p>
 			<p>하지만 새로운 빌드가 올라올 때마다 처음부터 플레이하시는 분들이 관찰되어서 이곳에 변경점들을 기록합니다.(그러니 다시 하실 필요가 없어요!)</p>
 			<p>-------------------------------------------</p>
-			<p>22.12.15 : 특정 버튼을 눌렀을 시 세이브기능이 먹통이 되는 문제 수정</p>
-			<p>22.11.26 : 각종 버그 수정, 공격 튜토리얼 추가, 화면모드기능 개선</p>
-			<p>22.10.1 : 사소한 버그 수정</p>
-			<p>22.9.29 : 각종 버그 수정, 공격시 마우스 커서 방향을 바라보게 수정, 얼어붙은 레오나르도경 마커 추가</p>
-			<p>22.9.13 : 버그 수정, 터렛 이펙트 추가</p>
-			<p>22.9.12 : 스테이지 이동 버그 수정</p>
+			<p>22.3.13 : 각종 버그 수정, 체력 및 마나 ui 개선, 보스전 배경 수정
+			<p>21.12.15 : 특정 버튼을 눌렀을 시 세이브기능이 먹통이 되는 문제 수정</p>
+			<p>21.11.26 : 각종 버그 수정, 공격 튜토리얼 추가, 화면모드기능 개선</p>
+			<p>21.10.1 : 사소한 버그 수정</p>
+			<p>21.9.29 : 각종 버그 수정, 공격시 마우스 커서 방향을 바라보게 수정, 얼어붙은 레오나르도경 마커 추가</p>
+			<p>21.9.13 : 버그 수정, 터렛 이펙트 추가</p>
+			<p>21.9.12 : 스테이지 이동 버그 수정</p>
 			<p>21.9.11 : 편의성 개선, 터렛 그래픽 수정 및 각종 버그 수정</p>
 			<p>21.8.17 : 사소한 그래픽 개선</p>
 			<p>21.8.16 : 사소한 버그 수정</p>
