--- a/patch.html
+++ b/patch.html
@@ -20,6 +20,7 @@
 			<p>데모 버전은 정식 버전이 출시될 때까지 레벨의 공개 범위나 게임 요소들에 큰 변경사항은 없을 예정이며, 사소한 변경과 버그 수정만 있을 예정입니다.</p>
 			<p>하지만 새로운 빌드가 올라올 때마다 처음부터 플레이하시는 분들이 관찰되어서 이곳에 변경점들을 기록합니다.(그러니 다시 하실 필요가 없어요!)</p>
 			<p>-------------------------------------------</p>
+			<p>23.10.23 : 데모 보스 난이도 수정 및 각종 버그 수정</p>
 			<p>23.8.31 : 각종 버그 수정</p>
 			<p>23.8.16 : 각종 버그 수정 및 초반 레벨 개선</p>
 			<p>22.8.4 : 각종 버그 수정</p>
