--- a/patch.html
+++ b/patch.html
@@ -21,7 +21,7 @@
 			<p>하지만 새로운 빌드가 올라올 때마다 처음부터 플레이하시는 분들이 관찰되어서 이곳에 변경점들을 기록합니다.(그러니 다시 하실 필요가 없어요!)</p>
 			<p>-------------------------------------------</p>
 			<p>24.7.25 : 각종 버그 수정</p>
-			<p>24.7.17 : 각종 버그 수정 및 인벤토리 UI 개선</p>
+			<p>24.7.17 : 각종 버그 수정 및 소지품 UI 개선</p>
 			<p>24.6.28 : 각종 버그 수정</p>
 			<p>24.3.20 : 각종 버그 수정</p>
 			<p>24.3.6 : 각종 버그 수정</p>
